# DTEAM-django--practical-test

./: README.md  manage.py  pyproject.toml
CVProject/CVProject/: settings.py  urls.py
CVProject/Main/: models.py  tests.py  urls.py  views.py
CVProject/Main/fixtures/: sample_cv.json
CVProject/Main/templates/: home.html
CVProject1/: asgi.py  settings.py  urls.py  wsgi.py
main/: tests.py  urls.py
main/fixtures/: sample_cv.json
main/templates/: cv.html
