[project]
name = "dteam-django-practical-test"
version = "0.1.0"
description = "dteam-django--practical-test"
authors = [
    {name = "rymishal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
